--- a/app/sass/bd_education.scss
+++ b/app/sass/bd_education.scss
@@ -150,6 +150,9 @@
     .white-special{
     	color:#91bfff;
     }
+    .cell_hd {
+    	display: table-cell;
+    }
 	.hex-v-center{
 		display:table-cell;vertical-align: middle;height:68px;width: 68px;
 		text-align: center;
