--- a/app/css/bd_education_new.css
+++ b/app/css/bd_education_new.css
@@ -22,8 +22,7 @@ header.icon_2 {
   display: -moz-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 15px;
-  font-weight: bold; }
+  padding: 15px; }
   .table-title .bd_mx {
     -webkit-box-flex: 1;
     -webkit-flex: 1;
