--- a/app/sass/bd_education_new.scss
+++ b/app/sass/bd_education_new.scss
@@ -6,6 +6,8 @@
    body{
 	   background-color: #f5f5f5;
    }
+
+
 	header{
 		color:#fff;
 		height:0.6rem;
@@ -29,7 +31,7 @@
 	.table-title {
 		@include flexbox;
 		padding: 15px;
-		font-weight: bold;
+		// font-weight: bold;
 		.bd_mx {
 			@include flex(1);
 		}
