simple auto commit

--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -7,7 +7,7 @@
 	<div class="logo icon_{{type}}"> </div>
 	<div class="contaienr">
 		<div class="title">{{getInsuranceCNname()}}保障方案 {{data.score | number:1}}分</div>	
-		<div class="sub-title">方案总保费:{{money}} 元</div>	
+		<div class="sub-title">方案总保费:{{planAllMoney}} 元</div>	
 	</div>
 </div>
 <!-- <div class="table-wrapper" id="coverage_table"  data-ng-init="init()"  ng-class="{'border-bt': data.coverages.length<=(showNum+1)}"> -->
