--- a/app/template/new/product_128 - 副本.html
+++ b/app/template/new/product_128 - 副本.html
@@ -47,14 +47,14 @@
 <div class="showknow-container" style="display: none;">
 	<div class="know-content">
 		<h4>1.承保年龄</h4>
-		<p>0-18周岁的儿童。</p>
-		<h4>2.保障期间</h4>
-		<p>本产品提供1年期的保障。</p>
+		<p>本产品承保年龄为16-65周岁（含16、65周岁），未成年人累计意外身故保额以保监会规定为准。</p>
+		<h4>2.承保范围</h4>
+		<p>为马拉松长跑运动人群提供意外伤害、公共交通工具及意外医疗基础保障，特含猝死及个人责任保障。</p>
 		<h4>3.投保限制</h4>
-		<p>被保险人需为进行疫苗接种的自然人。</p>
+		<p>在中国境内（不含港澳台）的外籍人士购买本产品需满足：在中国生活或工作半年以上或有居住证，但不承保回原国籍。</p>
 		<h4 class="hide">4.投保份数</h4>
 		<p class="hide">本产品每一被保险人限投保一份。</p>
-		<h4 class="hide">5.其他事项</h4>
+		<h4 class="hide">5.承保区域</h4>
 		<p class="hide">本产品只承保中华人民共和国境内（不包含港澳台地区）的马拉松活动。</p>
 
 	</div>
@@ -65,10 +65,10 @@
 
 	<div class="button-container">
 		<div class="left">
-			<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/123" class="weui_btn weui_btn_plain_more">产品条款</a>
+			<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/225" class="weui_btn weui_btn_plain_more">产品条款</a>
 		</div>
 		<div class="right">
-			<a href="http://web.youbaowuxian.com/#/claim_information?claim_id=37" class="weui_btn weui_btn_plain_more">理赔资料</a>
+			<a href="http://web.youbaowuxian.com/#/claim_information?claim_id=35" class="weui_btn weui_btn_plain_more">理赔资料</a>
 		</div>
 	</div>
 
@@ -78,27 +78,27 @@
 		<li class="qa-item  question">
 			<div class="qa-icon "></div>
 			<div class="qa-content">
-				<div>针无忧疫苗险包含了一类和二类疫苗吗？还是只针对二类疫苗？</div>
+				<div>明天就要参加赛事了，想问下现在可以购买吗？</div>
 			</div>
 		</li>
 		<li class="qa-item answer">
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
 				<div>
-					这两类是都包含的，被保险人在经人民政府卫生主管部门指定的医疗卫生机构接种疫苗后发生预防接种不良反应或偶合症而导致被保险人身故、伤残、医疗费用支出或住院治疗的，保险人依照合同约定给付保险金。
+					您好！这款“众行天下”马拉松保障计划最早的生效日期为网上投保的次日零时。您在需要参加马拉松前一天晚上24时之前完成投保并支付都是可以享受保障的。
 				</div>
 			</div>
 		</li>
 		<li class="qa-item  question">
 			<div class="qa-icon "></div>
 			<div class="qa-content">
-				<div>打了疫苗，宝宝胳膊局部红肿，发热，能赔偿多少钱，需要什么条件才能赔偿？如，没入院治疗，自己好了，会赔偿吗？</div>
+				<div>请问15岁的中学生参加马拉松比赛，可以投保吗？</div>
 			</div>
 		</li>
 		<li class="qa-item answer">
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
-				<div>您好，在保险期间内，被保险人发生预防接种一般反应，并在二级或二级以上公立医院或接种疫苗的医疗卫生机构进行治疗，保险人就被保险人自事故发生之日起180日内实际支出的按照当地社会医疗保险主管部门规定可报销的、必要的、合理的医疗费用，按保险单载明的免赔额、赔付比例计算给付预防接种一般反应医疗保险金。</div>
+				<div>您好！这款“众行天下”马拉松保障计划的承保年龄为：16-65周岁，很抱歉未满16周岁暂时不能投保。</div>
 			</div>
 		</li>
 		<li class="qa-item  question hide">
