simple auto commit

--- a/app/template/new/product_107.html
+++ b/app/template/new/product_107.html
@@ -8,7 +8,7 @@
 	<div class="introd-container">
 		<div class="detail-container">
 			<div>
-				<img src="img/product/zymls01.png" ></div>
+				<img src="img/product/dtblnfa.png" ></div>
 		</div>
 	</div>
 	<!--
@@ -47,16 +47,13 @@
 <div class="showknow-container" style="display: none;">
 	<div class="know-content">
 		<h4>1.承保年龄</h4>
-		<p>本产品承保年龄为16-65周岁（含16、65周岁），未成年人累计意外身故保额以保监会规定为准。</p>
-		<h4>2.承保范围</h4>
-		<p>为马拉松长跑运动人群提供意外伤害、公共交通工具及意外医疗基础保障，特含猝死及个人责任保障。</p>
-		<h4>3.投保限制</h4>
-		<p>在中国境内（不含港澳台）的外籍人士购买本产品需满足：在中国生活或工作半年以上或有居住证，但不承保回原国籍。</p>
-		<h4 class="hide">4.投保份数</h4>
-		<p class="hide">本产品每一被保险人限投保一份。</p>
-		<h4 class="hide">5.承保区域</h4>
-		<p class="hide">本产品只承保中华人民共和国境内（不包含港澳台地区）的马拉松活动。</p>
-
+		<p>50周岁到75周岁之间的老年人，可续保至81岁。</p>
+		<h4>2.保障期间</h4>
+		<p>本产品提供1年期的保障。</p>
+		<h4>3.投保份数</h4>
+		<p>本产品每人限投1份。</p>
+		<h4 class="hide">4..特别约定</h4>
+		<p class="hide">观察期为180天，前4年续保保费不变；第五年续保重新计算保费，以此类推。</p>
 	</div>
 	<div class="more-1-container ">
 		查看更多
@@ -65,10 +62,10 @@
 
 	<div class="button-container">
 		<div class="left">
-			<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/225" class="weui_btn weui_btn_plain_more">产品条款</a>
+			<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/116" class="weui_btn weui_btn_plain_more">产品条款</a>
 		</div>
 		<div class="right">
-			<a href="http://web.youbaowuxian.com/#/claim_information?claim_id=35" class="weui_btn weui_btn_plain_more">理赔资料</a>
+			<a href="http://web.youbaowuxian.com/#/claim_information?claim_id=12" class="weui_btn weui_btn_plain_more">理赔资料</a>
 		</div>
 	</div>
 
@@ -78,27 +75,39 @@
 		<li class="qa-item  question">
 			<div class="qa-icon "></div>
 			<div class="qa-content">
-				<div>明天就要参加赛事了，想问下现在可以购买吗？</div>
+				<div>我母亲快60了，需要体检吗？</div>
 			</div>
 		</li>
 		<li class="qa-item answer">
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
 				<div>
-					您好！这款“众行天下”马拉松保障计划最早的生效日期为网上投保的次日零时。您在需要参加马拉松前一天晚上24时之前完成投保并支付都是可以享受保障的。
+					您好，投保不需要进行体检，但该款产品要求被保险人健康体投保且在投保时如实填写健康告知。
 				</div>
 			</div>
 		</li>
 		<li class="qa-item  question">
 			<div class="qa-icon "></div>
 			<div class="qa-content">
-				<div>请问15岁的中学生参加马拉松比赛，可以投保吗？</div>
+				<div>观察期180天，我理解就是，在购买后合同生效内半年，出问题是无法理赔的？如果合同有效期是一年，那最多就半年的理赔期限吧</div>
 			</div>
 		</li>
 		<li class="qa-item answer">
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
-				<div>您好！这款“众行天下”马拉松保障计划的承保年龄为：16-65周岁，很抱歉未满16周岁暂时不能投保。</div>
+				<div>您好，重大疾病保险均有一定期限的观察期，续保不会再重新计算观察期，该产品前四年续保保费不变且保证续保到被保险人81岁。</div>
+			</div>
+		</li>
+		<li class="qa-item  question">
+			<div class="qa-icon "></div>
+			<div class="qa-content">
+				<div>可以保障多少种病？</div>
+			</div>
+		</li>
+		<li class="qa-item answer">
+			<div class="qa-icon" ></div>
+			<div class="qa-content">
+				<div>该产品包括三方面的保障责任，分别是：原位癌保险金，恶性肿瘤保险金和高医疗费用恶性肿瘤保险金，基本保额是10万元，其中恶性肿瘤100%保额，高医疗费恶性肿瘤150%保额， 原位癌提前给付20%保额。</div>
 			</div>
 		</li>
 		<li class="qa-item  question hide">
