--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -43,7 +43,7 @@
 	</ul>
 	<div class="supply-info">
 		<div class="title" ng-if="data.address || data.car_no || data.destination">补充信息</div>
-		<div class="supply-item"  ng-show="data.address">
+		<div class="supply-item" ng-if="data.address">
 			<div class="introd">地址</div>
 			<div class="content"><input type="text" name="address" ng-model="user.address" class="ipt"   placeholder="请输入地址" required></div>
 			
@@ -51,7 +51,7 @@
 		<div class="supply-item"  style="color:red" ng-show="tbform.address.$dirty && tbform.address.$invalid ">
 			<small class="error" ng-show="tbform.address.$error.required">地址必填</small>
 		</div>
-		<div class="supply-item" ng-show="data.car_no">
+		<div class="supply-item" ng-if="data.car_no">
 			<div class="introd">车牌号</div>
 			<div class="content"><input type="text" name="car_no"  ng-model="user.car_no"   class="ipt"   placeholder="请输入车牌号" required></div>
 		</div>
@@ -59,7 +59,7 @@
 			<small class="error" ng-show="tbform.car_no.$error.required">车牌号必填</small>
 		</div>
 
-		<div class="supply-item" ng-show="data.destination">
+		<div class="supply-item" ng-if="data.destination">
 			<div class="introd">目的地</div>
 			<div class="content"><input type="date" name="destination"  ng-model="user.destination"   class="ipt"   placeholder="请输入目的地" required></div>
 		</div>
