--- a/app/template/new/product_103.html
+++ b/app/template/new/product_103.html
@@ -8,7 +8,7 @@
 	<div class="introd-container">
 		<div class="detail-container">
 			<div>
-				<img src="img/product/zymls01.png" ></div>
+				<img src="img/product/dtbnxzgjai.png" ></div>
 		</div>
 	</div>
 	<!--
