--- a/app/partials/supply_userinfo.html
+++ b/app/partials/supply_userinfo.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/recognizee_first.css?rev=5d4f24d08f64bc80cd7469a31c1d8fb9">
+<link rel="stylesheet" href="css/recognizee_first.css?rev=fdgsgfdg">
 <div class="recognizee_first_ctrl">
 	<div class="rgn_head">选择被保险人</div>
 	<div class="choose">
