--- a/app/css/recognizee_first.css
+++ b/app/css/recognizee_first.css
@@ -2,6 +2,7 @@
 body {
   background: #f5f5f5; }
 .recognizee_first_ctrl {
+  width: 100%;
   padding-bottom: 60px; }
   .recognizee_first_ctrl .rgn_head {
     line-height: .69rem;
@@ -71,6 +72,16 @@ body {
         flex: 1;
         border: none;
         font-size: 15px; }
+      .recognizee_first_ctrl .main .line-box input::input-placeholder {
+        color: #ccc; }
+      .recognizee_first_ctrl .main .line-box input::-webkit-input-placeholder {
+        color: #ccc; }
+      .recognizee_first_ctrl .main .line-box input::-moz-input-placeholder {
+        color: #ccc; }
+      .recognizee_first_ctrl .main .line-box input::-webkit-input-placeholder {
+        color: #ccc; }
+      .recognizee_first_ctrl .main .line-box input::-ms-input-placeholder {
+        color: #ccc; }
     .recognizee_first_ctrl .main .line-box:not(:last-child) {
       border-bottom: 1px solid #e2e2e2; }
     .recognizee_first_ctrl .main .noBor {
@@ -119,3 +130,9 @@ select {
   width: 12px; }
 .demo--checkbox.demo--radioInput, .demo--radio:checked + .demo--checkbox.demo--radioInput:after {
   border-radius: 0; }
+.recognizee_first_ctrl {
+  position: fixed;
+  top: 0;
+  bottom: 50px;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch; }
