--- a/app/partials/recognizee.html
+++ b/app/partials/recognizee.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/recognizee.css?rev=b4be30538d26e76510a4b8c66ec9e133">
+<link rel="stylesheet" href="css/recognizee.css?rev=sdfdsfsdfsd">
 <div class="recognizee_contrl">
 	<ul class="delete">
 		<li>被保人资料</li>
