--- a/app/sass/recognizee.scss
+++ b/app/sass/recognizee.scss
@@ -19,11 +19,12 @@ select {
 }
 .recognizee_contrl {
 	background: #fff;
+	width: 100%;
 	.delete {
 		@include flexbox;
 		color:#555;
 		padding: 0 15px;
-		line-height: .58rem;
+		line-height: 45px;
 		border-bottom: 1px solid #e2e2e2;
 		li{
 			@include flex(1);
@@ -53,7 +54,7 @@ select {
 		ul {
 			@include flexbox;
 			// border-bottom: 1px solid #e2e2e2; 
-			line-height: .58rem;
+			line-height: 45px;
 			font-size: 15px;
 			li:nth-child(1) {
 				padding-left: 5px;
@@ -67,7 +68,21 @@ select {
 			 input {
 			  	color: #555;
 			  }
-			  
+			input::input-placeholder {
+			  color: #ccc;
+			}
+			input::-webkit-input-placeholder {
+			  color: #ccc;
+			}
+			input::-moz-input-placeholder {
+			  color: #ccc;
+			}
+			input::-webkit-input-placeholder {
+			  color: #ccc;
+			}
+			input::-ms-input-placeholder {
+			  color: #ccc;
+			}
 			  select {
 			  	@include flex(1);
 			  	z-index: 10;
@@ -256,4 +271,14 @@ color: #5aa8ff;
 }
 .weui_mask {
 	z-index: 10;
+}
+/*ios底部fixed失效的问题的解决方案*/
+.recognizee_contrl {
+   position: fixed;
+    top: 0;
+    bottom: 50px;
+    /* 使之可以滚动 */
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+
 }
