--- a/app/sass/recognizee_first.scss
+++ b/app/sass/recognizee_first.scss
@@ -5,6 +5,7 @@ body {
 	background: #f5f5f5;
 }
 .recognizee_first_ctrl {
+	width: 100%;
 	padding-bottom: 60px;
 	.rgn_head {
 		line-height: .69rem;
@@ -67,6 +68,21 @@ body {
 				border:none;
 				font-size: 15px;
 			}
+			input::input-placeholder {
+			  color: #ccc;
+			}
+			input::-webkit-input-placeholder {
+			  color: #ccc;
+			}
+			input::-moz-input-placeholder {
+			  color: #ccc;
+			}
+			input::-webkit-input-placeholder {
+			  color: #ccc;
+			}
+			input::-ms-input-placeholder {
+			  color: #ccc;
+			}
 		}
 		.line-box:not(:last-child){
 			border-bottom: 1px solid #e2e2e2;
@@ -105,3 +121,12 @@ select {
 .demo--radioInput{background-color:#fff;border:1px solid rgba(0,0,0,0.15);border-radius:100%;display:inline-block;height:16px;margin-right:10px;margin-top:-1px;vertical-align:middle;width:16px;line-height:1}
 .demo--radio:checked + .demo--radioInput:after{background-color:#5aa8ff;border-radius:100%;content:"";display:inline-block;height:12px;margin:2px;width:12px}
 .demo--checkbox.demo--radioInput,.demo--radio:checked + .demo--checkbox.demo--radioInput:after{border-radius:0}
+.recognizee_first_ctrl {
+   position: fixed;
+    top: 0;
+    bottom: 50px;
+    /* 使之可以滚动 */
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+
+}
