simple auto commit

--- a/app/template/new/product_107.html
+++ b/app/template/new/product_107.html
@@ -47,7 +47,7 @@
 <div class="showknow-container" style="display: none;">
 	<div class="know-content">
 		<h4>1.承保年龄</h4>
-		<p>50周岁到75周岁之间的老年人，可续保至81岁。</p>
+		<p>51周岁到75周岁之间的老年人，可续保至81岁。</p>
 		<h4>2.保障期间</h4>
 		<p>本产品提供1年期的保障。</p>
 		<h4>3.投保份数</h4>
@@ -120,7 +120,7 @@
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
 				<div>
-					您好，投保成功后，我们将提供保单作为您的投保凭证。您可以通过以下方式查询您的保单：<br/>1.打开诺贝微信公众号，在“我的订单”中进行查询，或向您预留的邮箱发送电子保单；<br/>2.拨打诺贝400-992-0205客服电话查询；<br/>3.拨打中意财险400-600-2700客服电话查询；<br/>4.进入中意财险保险公司官网查询。
+					您好，投保成功后，我们将提供保单作为您的投保凭证。您可以通过以下方式查询您的保单：<br/>1.打开诺贝微信公众号，在“我的订单”中进行查询，或向您预留的邮箱发送电子保单；<br/>2.拨打诺贝400-992-0205客服电话查询。
 				</div>
 			</div>
 		</li>
