--- a/app/template/new/product_103.html
+++ b/app/template/new/product_103.html
@@ -121,7 +121,7 @@
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
 				<div>
-					您好，投保成功后，我们将提供保单作为您的投保凭证。您可以通过以下方式查询您的保单：<br/>1.打开诺贝微信公众号，在“我的订单”中进行查询，或向您预留的邮箱发送电子保单；<br/>2.拨打诺贝400-992-0205客服电话查询；<br/>3.拨打中意财险400-600-2700客服电话查询；<br/>4.进入中意财险保险公司官网查询。
+					您好，投保成功后，我们将提供保单作为您的投保凭证。您可以通过以下方式查询您的保单：<br/>1.打开诺贝微信公众号，在“我的订单”中进行查询，或向您预留的邮箱发送电子保单；<br/>2.拨打诺贝400-992-0205客服电话查询。
 				</div>
 			</div>
 		</li>
