--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -241,15 +241,15 @@ header {
   font-size: .27rem;
   color: #ff5c00; }
 .head_ctrl {
-  height: 60%;
-  overflow: auto;
-  padding-bottom: 45px; }
+  height: 3rem;
+  overflow: auto; }
 .head-container {
   position: absolute;
-  top: 22.7%;
   bottom: 0;
   width: 100%;
-  background-color: #fff; }
+  background-color: #fff;
+  padding-bottom: 45px;
+  -webkit-overflow-scrolling: touch; }
 .small_img_ctrl {
   box-sizing: border-box;
   border: 1px solid #e2e2e2;
