--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -126,7 +126,20 @@
 
 
 </div>
-
+<div class="mask" id="popup" style="">
+		<div class="toast accident_mask">
+			<div class="income_ctrl">选择年收入</div>
+			<div class="calculate">我们将根据您的年收入测算保额</div>
+			<div class="income_details">
+				<div class="income">5玩一下</div>
+				<div class="income">10万</div>
+				<div class="income">20万</div>
+				<div class="income">30万</div>
+				<div class="income">40万</div>
+				<div class="income">50万以上</div>
+			</div>
+		</div>
+	</div>
 
 <div class="fix_container select_btn">
 	<div class="left" style="width: 65%;height: 48px;">
