--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=a9a8cd4c55fb758698593c0727dababd">
+<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=dsfdsdsfdsfsdfdfs">
 
 <div  cg-busy="myPromise" >
 	<header>
@@ -132,11 +132,12 @@
 					<li ng-click="stopPro($event)"><img src="img/plus.jpg"></li>
 				</ul>
 			</div> -->
-			<div class="fix_container">
-				<a href="javascript:void(0)"  style="height:45px;line-height: 45px;"  ng-click="submit()"  class="btn btn_n_primary">确定</a>
-			</div>
+			
 		</div>
     </div>
+    <div class="fix_container">
+		<a href="javascript:void(0)"  style="height:45px;line-height: 45px;"  ng-click="submit()"  class="btn btn_n_primary">确定</a>
+	</div>
 </div>
 
 <div class="mask " id="popup">
