--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -294,7 +294,7 @@ header {
 	overflow: auto;
 	// margin-bottom: 45px;
 	 // -webkit-overflow-scrolling: touch;
-	   visibility: hidden;
+	   // visibility: hidden;
 }
 .head-container {
   position: absolute;
