--- a/app/css/information.css
+++ b/app/css/information.css
@@ -5,9 +5,10 @@
 body {
   background: #f5f5f5; }
 .information_controller {
-  padding: 0 .15rem; }
+  padding: 0 .15rem;
+  margin-bottom: 30px; }
   .information_controller .infor_head {
-    padding-top: .3rem;
+    padding-top: 30px;
     font-weight: bold; }
     .information_controller .infor_head img {
       width: 15px;
@@ -23,7 +24,7 @@ body {
   .information_controller .insurance_name {
     font-size: 13px;
     color: #555;
-    padding: 10px 0;
+    padding: 15px 0;
     font-weight: 600; }
   .information_controller .job {
     display: -webkit-box;
@@ -32,12 +33,9 @@ body {
     display: -ms-flexbox;
     display: flex;
     padding-top: 15px;
-    -webkit-box-lines: multiple;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    justify-content: space-between; }
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
+    flex-flow: row wrap; }
     .information_controller .job .job_info {
       width: 90px;
       height: 30px;
@@ -54,18 +52,24 @@ body {
   .information_controller .info_word {
     font-size: 13px;
     color: #555;
-    line-height: 25px; }
+    line-height: 25px;
+    margin-bottom: 11px; }
   .information_controller .info_toast {
     overflow: auto; }
     .information_controller .info_toast .toast_head {
       box-sizing: border-box;
-      border-left: 3px solid #5aa8ff;
+      color: #006ee9;
       padding-left: 5px;
       font-size: 13px;
-      color: #555;
       margin-bottom: 10px; }
     .information_controller .info_toast .toast_main {
       font-size: 12px;
+      color: #555;
+      margin-bottom: 20px; }
+    .information_controller .info_toast .job_name {
+      text-align: center;
+      font-size: 15px;
+      font-weight: bold;
       color: #555;
       margin-bottom: 20px; }
 .cut_container {
