--- a/app/sass/information.scss
+++ b/app/sass/information.scss
@@ -6,8 +6,9 @@ body{
 }
 .information_controller {
 	padding: 0 .15rem;
+	margin-bottom: 30px;
 	.infor_head {
-		padding-top: .3rem;
+		padding-top: 30px;
 		font-weight: bold;
 		img {
 			width: 15px;
@@ -27,7 +28,7 @@ body{
 	.insurance_name {
 		font-size: 13px;
 		color: #555;
-		padding: 10px 0;
+		padding: 15px 0;
 		font-weight: 600;
 	}
 	// main start
@@ -35,9 +36,10 @@ body{
 		@include flexbox;
 		padding-top: 15px;
 		//溢出折行
-		@include flex-wrap(wrap);
-		//自动平分
-		@include justify-content(space-between);
+		// @include flex-wrap(wrap);
+		// //自动平分
+		@include justify-content(space-around);
+        flex-flow: row wrap;
 		.job_info {
 			width: 90px;
 			height: 30px;
@@ -58,21 +60,29 @@ body{
 		font-size: 13px;
 		color: #555;
 		line-height: 25px;
+		margin-bottom: 11px;
 	}
+
 	// 弹窗
 	.info_toast {
 		overflow: auto;
 		.toast_head {
 			box-sizing: border-box;
-			border-left: 3px solid #5aa8ff;
+			color: #006ee9;
 			// height: 13px;
 			padding-left: 5px;
 			font-size: 13px;
-			color: #555;
 			margin-bottom: 10px;
 		}
 		.toast_main {
 			font-size: 12px;
+			color: #555;
+			margin-bottom: 20px;
+		}
+		.job_name {
+			text-align : center;
+			font-size: 15px;
+			font-weight: bold;
 			color: #555;
 			margin-bottom: 20px;
 		}
