--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=dsfdsdsfdsfsdfdfs">
+<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=ae22447c55039cdf7161d2c1c6b296e6">
 
 <div  cg-busy="myPromise" >
 	<header>
