--- a/app/css/ring.css
+++ b/app/css/ring.css
@@ -39,8 +39,7 @@
     color: #588dd4;
     font-size: .13rem;
     float: right;
-    margin-right: 10px;
-    margin-top: 5px; }
+    margin-right: 10px; }
 .hairlines .bt_container {
   border-width: 0.5px; }
 .bt_container a {
@@ -237,15 +236,21 @@
 .font_wei {
   font-weight: bold; }
 .accident_mask {
-  height: 275px;
-  height: 3.55rem;
-  box-sizing: border-box;
-  padding: 25px 20px; }
+  height: 3.55rem; }
 .income_ctrl {
   font-size: .19rem;
   color: #555;
   text-align: center;
-  padding-bottom: .13rem; }
+  padding-bottom: .1rem;
+  position: relative; }
+  .income_ctrl .off {
+    position: absolute;
+    right: -0.3rem;
+    top: -0.3rem;
+    padding: 20px; }
+    .income_ctrl .off img {
+      width: .16rem;
+      height: .16rem; }
 .calculate {
   font-size: .15rem;
   color: #999;
@@ -272,3 +277,28 @@
     border-radius: 3px;
     margin-bottom: .25rem;
     font-size: .19rem; }
+.toast_cs {
+  height: 3.8rem;
+  background: #f5f5f5;
+  right: 0;
+  left: 0;
+  font-size: 14px;
+  line-height: 20px;
+  position: fixed;
+  z-index: 3;
+  top: .7rem;
+  width: 90%;
+  max-width: 400px;
+  margin: auto;
+  padding: .32rem .26rem;
+  word-wrap: break-word;
+  word-break: break-all;
+  color: #4e4e4e;
+  border-radius: 10px;
+  background: #fff;
+  box-sizing: border-box;
+  max-height: 3.8rem;
+  overflow: hidden; }
+.blue {
+  background: #588dd4;
+  color: #fff; }
