--- a/app/css/information.css
+++ b/app/css/information.css
@@ -4,6 +4,18 @@
   padding: 0; }
 body {
   background: #f5f5f5; }
+@media (max-width: 320px) {
+  .job_info_ctrl {
+    flex: 0 0 33.3%; } }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
+  .job_info_ctrl {
+    flex: 0 0 33.3%; } }
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
+  .job_info_ctrl {
+    flex: 0 0 33.3%; } }
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) {
+  .job_info_ctrl {
+    flex: 0 0 25%; } }
 .information_controller {
   padding: 0 .15rem;
   margin-bottom: 30px; }
@@ -33,33 +45,59 @@ body {
     display: -ms-flexbox;
     display: flex;
     padding-top: 15px;
-    -webkit-justify-content: space-around;
-    justify-content: space-around;
     flex-flow: row wrap; }
-    .information_controller .job .job_info {
-      width: 90px;
-      height: 30px;
-      box-sizing: border-box;
-      border: 1px solid #ccc;
-      border-radius: 3px;
-      text-align: center;
-      line-height: 30px;
+    .information_controller .job .job_info_ctrl {
       margin-bottom: 10px;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      padding: 0 5px; }
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center; }
+      .information_controller .job .job_info_ctrl .job_info {
+        width: 90px;
+        height: 30px;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        text-align: center;
+        line-height: 30px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        padding: 0 5px;
+        margin: 0 auto; }
   .information_controller .info_word {
     font-size: 13px;
     color: #555;
     line-height: 25px;
     margin-bottom: 11px; }
   .information_controller .info_toast {
-    overflow: auto; }
+    overflow: auto;
+    padding: 0;
+    border: .35rem solid #fff;
+    max-height: 3.63rem;
+    font-size: 14px;
+    line-height: 20px;
+    position: fixed;
+    z-index: 3;
+    top: .8rem;
+    width: 90%;
+    max-width: 400px;
+    min-height: 4.6em;
+    overflow: auto;
+    margin: auto;
+    right: 0;
+    left: 0;
+    word-wrap: break-word;
+    word-break: break-all;
+    color: #4e4e4e;
+    border-radius: 5px;
+    background: #fff;
+    box-sizing: border-box; }
     .information_controller .info_toast .toast_head {
       box-sizing: border-box;
       color: #006ee9;
-      padding-left: 5px;
       font-size: 13px;
       margin-bottom: 10px; }
     .information_controller .info_toast .toast_main {
