--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -213,7 +213,8 @@ header {
   .showknow-container h4 {
     font-size: 14px;
     margin: 0;
-    margin-top: 18px; }
+    margin-top: 18px;
+    border-top: 1px solid #c1c1c1; }
   .showknow-container p {
     font-size: 14px;
     margin: 0; }
