--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -95,6 +95,7 @@
 			<div  style="clear:both;height: 1px;"></div>
 	        <div class="head_ctrl">
 	        <div class="select-container">
+	        	<div class="xian"></div>
 	        	<h4>出生日期</h4>
 	        	<input type="date" class="date_ctrl"  min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" ng-model="user.birthday"  name="birthday"  placeholder="yyyy/MM/dd"  ng-change="changeBirthday($event)" ng-click="clickBirthDay($event)">
 	        </div>
